Fixed table spacings and added colouring.
If you don't like this color format, feel free to change anything.

--- a/public/stylesheets/css/grayscale.css
+++ b/public/stylesheets/css/grayscale.css
@@ -8,8 +8,32 @@ body {
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #fff;
-    background-color: #000;
+    color: #000;
+    background-color: #c88d01;
+}
+
+#food
+{
+    background-color: #c88d01;
+}
+
+#suggest
+{
+    background-color: #9a3d00;
+}
+
+#recipes
+{
+    background-color: #c88d01;
+}
+
+#stores
+{
+    background-color: #9a3d00;
+}
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-color: #633;
 }
 
 html {
@@ -66,7 +90,7 @@ a:focus {
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: #000;
+    background-color: #222;
 }
 
 .navbar-custom .navbar-brand {
@@ -89,7 +113,7 @@ a:focus {
 }
 
 .navbar-custom a {
-    color: #fff;
+    color: #222;
 }
 
 .navbar-custom .nav li a {
@@ -136,9 +160,15 @@ a:focus {
     .navbar-custom.top-nav-collapse {
         padding: 0;
         border-bottom: 1px solid rgba(255,255,255,.3);
-        background: #000;
+        background: #822;
     }
 }
+/*
+#stores
+{
+    background: url(../img/Fruits.jpg) no-repeat bottom center scroll;
+}
+*/
 
 .intro {
     display: table;
@@ -146,7 +176,7 @@ a:focus {
     height: auto;
     padding: 100px 0;
     text-align: center;
-    color: #fff;
+    color: #222;
     background: url(../img/cubes.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
